Issue #3153: sqlite leaks on error. Changed statements of the form Py_DECREF(obj), obj = 0 to Py_CLEAR(obj).